# facesdk-rust

./: Cargo.toml  LICENSE  README.md  build.sh
fsdk/linux64/: libopenvino_ir_frontend.so.2440  plugins.xml
fsdk/win64/: idliveface.lib  plugins.xml
src/: consts.rs  fsdk.rs  fsdk_bindings.rs  liverecognition.rs  portrait.rs
